--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "rust-analyzer.cargo.features": ["native"],
+    // "rust-analyzer.cargo.features": ["native"],
+    "rust-analyzer.cargo.features": [
+        "web"
+    ],
 }
