both versions working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     // "rust-analyzer.cargo.features": ["native"],
     "rust-analyzer.cargo.features": [
-        "web"
+        "native"
+        // "web"
     ],
 }
