'unsafe' refactor + format

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,12 @@
         "native"
         // "web"
     ],
+    "[rust]": {
+        "editor.formatOnSave": true,
+        "editor.formatOnSaveMode": "file"
+    },
+    "[javascript]": {
+        "editor.formatOnSave": true,
+        "editor.formatOnSaveMode": "file"
+    }
 }
