--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ libloading = "0.8.3"
 game = { path = "game" }
 raylib-wasm = { version = "0.0.17", default-features = false }
 # raylib-wasm = { path = "raylib-wasm", default-features = false }
+
+# configure tests to discover the tests in the game crate
+[workspace]
+members = ["game"]
